--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "date-fns": "^2.14.0",
+    "date-fns-tz": "^1.0.10",
     "ember-auto-import": "^1.5.3",
     "ember-cli-babel": "^7.19.0",
     "ember-cli-htmlbars": "^4.3.1",
