--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
+# compiled output
 /dist/
 /tmp/
 
@@ -20,3 +21,8 @@
 /.node_modules.ember-try/
 /bower.json.ember-try
 /package.json.ember-try
+
+/**/*.hbs
+/**/*.html
+/jsconfig.json
+/package.json
