--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
+    "@precision-nutrition/prettier-config": "^1.1.0",
     "date-fns": "^2.14.0",
     "date-fns-tz": "^1.0.10",
     "ember-auto-import": "^1.5.3",
     "ember-cli-babel": "^7.19.0",
     "ember-cli-htmlbars": "^4.3.1",
-    "ember-get-config": "^0.2.4"
+    "ember-get-config": "^0.2.4",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
+    "prettier": "2.2.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
@@ -67,5 +73,20 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "prettier": "@precision-nutrition/prettier-config",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{css,md,yml}": [
+      "prettier --write"
+    ]
   }
 }
