--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@precision-nutrition/ember-date-fns-helpers",
-  "version": "0.5.1-rc.1",
+  "version": "0.5.1",
   "description": "date-fns helpers",
   "keywords": [
     "ember-addon"
