--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "date-fns-tz": "^1.1.4",
     "ember-auto-import": "^1.10.1",
     "ember-cli-babel": "^7.23.0",
-    "ember-cli-htmlbars": "^5.3.1",
-    "ember-get-config": "^0.2.4"
+    "ember-cli-htmlbars": "^5.3.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
