--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,13 +65,12 @@ jobs:
       fail-fast: false
       matrix:
         node-version: ['14']
-        embery-try-scenario:
-          [
+        embery-try-scenario: [
             'ember-lts-3.20',
             'ember-lts-3.24',
             'ember-release',
-            'ember-beta',
-            'ember-canary',
+            # 'ember-beta',
+            # 'ember-canary',
             'embroider-safe',
             'embroider-optimized',
           ]
